[package]
name = "pride"
version = "0.3.1"
edition = "2021"
authors = [ "Valerie Wolfe <sleeplessval@gmail.com>" ]
description = "Pride flags in the terminal."
homepage = "https://git.vwolfe.io/valerie/pride"
repository = "https://git.vwolfe.io/valerie/pride"
license = "MIT"
categories = [ "command-line-utilities" ]
keywords = [ "lgbt", "pride", "cli" ]

[package.metadata.aur]
name = "pride"
source = "archive/v$pkgver.tar.gz"

[[bin]]
name = "pride"
path = "src/main.rs"

[dependencies]
pico-args = "0.5.0"
termion = "2.0.1"

[profile.release]
opt-level = 's'
codegen-units = 1
debug = false
lto = true
panic = "abort"
strip = "symbols"

